# F3D-ODB-Reader-Plugin

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindAbqSDK.cmake
doc/odbfiles/: Job-1.odb
module/: CMakeLists.txt  vtk.module  vtkAbqIncludes.h  vtkF3DODBReader.cxx  vtkF3DODBReader.h
tests/: CMakeLists.txt  test.cpp
